tests/ui/union_intersection.stderr
error[E0432]: unresolved imports `range_set_int::intersection`, `range_set_int::union`
 --> tests/ui/union_intersection.rs:1:21
  |
1 | use range_set_int::{intersection, union};
  |                     ^^^^^^^^^^^^  ^^^^^ no `union` in the root
  |                     |
  |                     no `intersection` in the root
  |                     help: a similar name exists in the module: `intersection_dyn`
